// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots activity/ActivityItemIcon Default 1`] = `
<div
  id="root"
>
  <svg
    focusable="false"
    height="30px"
    preserveAspectRatio="xMidYMid meet"
    style="transform: rotate(360deg);"
    viewBox="0 0 24 24"
    width="30px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M11 15h2v2h-2v-2m0-8h2v6h-2V7m1-5C6.47 2 2 6.5 2 12a10 10 0 0 0 10 10a10 10 0 0 0 10-10A10 10 0 0 0 12 2m0 18a8 8 0 0 1-8-8a8 8 0 0 1 8-8a8 8 0 0 1 8 8a8 8 0 0 1-8 8z"
      fill="#00d3ff"
    />
  </svg>
</div>
`;

exports[`Storyshots activity/ActivityItemIcon Error 1`] = `
<div
  id="root"
>
  <svg
    focusable="false"
    height="30px"
    preserveAspectRatio="xMidYMid meet"
    style="transform: rotate(360deg);"
    viewBox="0 0 24 24"
    width="30px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M11 15h2v2h-2v-2m0-8h2v6h-2V7m1-5C6.47 2 2 6.5 2 12a10 10 0 0 0 10 10a10 10 0 0 0 10-10A10 10 0 0 0 12 2m0 18a8 8 0 0 1-8-8a8 8 0 0 1 8-8a8 8 0 0 1 8 8a8 8 0 0 1-8 8z"
      fill="#F44336"
    />
  </svg>
</div>
`;

exports[`Storyshots activity/ActivityItemIcon Info 1`] = `
<div
  id="root"
>
  <svg
    focusable="false"
    height="30px"
    preserveAspectRatio="xMidYMid meet"
    style="transform: rotate(360deg);"
    viewBox="0 0 24 24"
    width="30px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M11 15h2v2h-2v-2m0-8h2v6h-2V7m1-5C6.47 2 2 6.5 2 12a10 10 0 0 0 10 10a10 10 0 0 0 10-10A10 10 0 0 0 12 2m0 18a8 8 0 0 1-8-8a8 8 0 0 1 8-8a8 8 0 0 1 8 8a8 8 0 0 1-8 8z"
      fill="#00d3ff"
    />
  </svg>
</div>
`;

exports[`Storyshots activity/ActivityItemIcon Success 1`] = `
<div
  id="root"
>
  <svg
    focusable="false"
    height="30px"
    preserveAspectRatio="xMidYMid meet"
    style="transform: rotate(360deg);"
    viewBox="0 0 24 24"
    width="30px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10s10-4.5 10-10S17.5 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8s8 3.59 8 8s-3.59 8-8 8m4.59-12.42L10 14.17l-2.59-2.58L6 13l4 4l8-8l-1.41-1.42z"
      fill="#22bb00"
    />
  </svg>
</div>
`;

exports[`Storyshots activity/ActivityItemIcon Warning 1`] = `
<div
  id="root"
>
  <svg
    focusable="false"
    height="30px"
    preserveAspectRatio="xMidYMid meet"
    style="transform: rotate(360deg);"
    viewBox="0 0 24 24"
    width="30px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 2L1 21h22M12 6l7.53 13H4.47M11 10v4h2v-4m-2 6v2h2v-2"
      fill="#ff5500"
    />
  </svg>
</div>
`;
